# grasp_primitiveShape

./: LICENSE  README.md  py35.yml
V-REP/programming/bluezero/: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  TODO.md  config.h.in  v1-to-v2.md
V-REP/programming/bluezero/bindings/: CMakeLists.txt  bluezero.h  bluezero.i
V-REP/programming/bluezero/bindings/csharp/: CMakeLists.txt  test_bluezero.cs
V-REP/programming/bluezero/bindings/java/: java.cpp  java.h
V-REP/programming/bluezero/bindings/lua/: lua.cpp
V-REP/programming/bluezero/bindings/pure-python/: pure-python.py
V-REP/programming/bluezero/bindings/python/: CMakeLists.txt  test-pub.py  test-sub.py
V-REP/programming/bluezero/bindings/python-boost/: CMakeLists.txt  pyb0.cpp  test-publisher.py  test-service-client.py  test-service-server.py  test-subscriber.py
V-REP/programming/bluezero/bindings/python-ctypes/: b0.py  test-publisher.py  test-service-client.py  test-service-server.py  test-subscriber.py
V-REP/programming/bluezero/examples/: CMakeLists.txt
V-REP/programming/bluezero/examples/client_server/: CMakeLists.txt  client_node.cpp  server_node.cpp
V-REP/programming/bluezero/examples/client_server_c/: CMakeLists.txt  client_node_c.c  server_node_c.c
V-REP/programming/bluezero/examples/client_server_msg/: CMakeLists.txt  client_node_msg.cpp  msg.h  server_node_msg.cpp
V-REP/programming/bluezero/examples/client_server_oop/: CMakeLists.txt  client_node_object.cpp  server_node_object.cpp
V-REP/programming/bluezero/examples/cmdline_args/: CMakeLists.txt  args.cpp
V-REP/programming/bluezero/examples/publisher_subscriber/: CMakeLists.txt  publisher_node.cpp  subscriber_node.cpp  subscriber_node_object_manual.cpp
V-REP/programming/bluezero/examples/publisher_subscriber_c/: CMakeLists.txt  publisher_node_c.c  subscriber_node_c.c
V-REP/programming/bluezero/examples/publisher_subscriber_msg/: CMakeLists.txt  msg.h  publisher_node_msg.cpp  subscriber_node_msg.cpp
V-REP/programming/bluezero/examples/publisher_subscriber_multi/: CMakeLists.txt  multi_publisher.cpp  multi_subscriber.cpp
V-REP/programming/bluezero/examples/publisher_subscriber_oop/: CMakeLists.txt  publisher_node_object.cpp  subscriber_node_object.cpp
V-REP/programming/bluezero/examples/remapping/: CMakeLists.txt  const.cpp  operation.cpp  print.cpp
V-REP/programming/bluezero/include/b0/: b0.h  exceptions.h  node.h  node_state.h  publisher.h  service_client.h  service_server.h  socket.h  subscriber.h  user_data.h
V-REP/programming/bluezero/include/b0/bindings/: c.h
V-REP/programming/bluezero/include/b0/compress/: compress.h  lz4.h  zlib.h
V-REP/programming/bluezero/include/b0/exception/: argument_error.h  exception.h  invalid_state_transition.h  message_pack_error.h  message_unpack_error.h  name_resolution_error.h  unsupported_compression_algorithm.h
V-REP/programming/bluezero/include/b0/logger/: interface.h  level.h  logger.h
V-REP/programming/bluezero/include/b0/message/: message.h  message_envelope.h  message_part.h
V-REP/programming/bluezero/include/b0/protobuf/: publisher.h  service_client.h  service_server.h  socket.h  subscriber.h
V-REP/programming/bluezero/include/b0/resolver/: client.h  resolver.h
V-REP/programming/bluezero/include/b0/utils/: env.h  graphviz.h  thread_name.h  time_sync.h
V-REP/programming/bluezero/src/b0/: b0.cpp  node.cpp  node_state.cpp  publisher.cpp  service_client.cpp  service_server.cpp  socket.cpp  subscriber.cpp
V-REP/programming/bluezero/src/b0/bindings/: c.cpp
V-REP/programming/bluezero/src/b0/compress/: compress.cpp  lz4.cpp  zlib.cpp
V-REP/programming/bluezero/src/b0/exception/: argument_error.cpp  exception.cpp  invalid_state_transition.cpp  message_pack_error.cpp  message_unpack_error.cpp  (+2 more)
V-REP/programming/bluezero/src/b0_graph_monitor/: graph_monitor.cpp
V-REP/programming/bluezero/src/b0_gui_graph_monitor/: gui_graph_monitor.cpp
V-REP/programming/bluezero/src/b0_gui_logger_monitor/: gui_logger_monitor.cpp
V-REP/programming/bluezero/src/b0_gui_process_manager/: b0node.cpp  b0node.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodesview.cpp  nodesview.h  startnodedialog.cpp  startnodedialog.h  startnodedialog.ui
V-REP/programming/bluezero/src/b0_logger_monitor/: logger_monitor.cpp
V-REP/programming/bluezero/src/b0_node_list/: node_list.cpp
V-REP/programming/bluezero/src/b0_process_manager/: README.md  hub.cpp  process_manager.cpp  protocol.h
V-REP/programming/bluezero/src/b0_resolver/: resolver_main.cpp
V-REP/programming/bluezero/src/b0_service_call/: service_call.cpp
V-REP/programming/bluezero/src/b0_service_list/: service_list.cpp
V-REP/programming/bluezero/src/b0_system_monitor/: protocol.h  system_monitor.cpp
V-REP/programming/bluezero/src/b0_topic_echo/: topic_echo.cpp
V-REP/programming/bluezero/src/b0_topic_list/: topic_list.cpp
V-REP/programming/bluezero/src/b0_topic_publish/: topic_publish.cpp
V-REP/programming/bluezero/src/docs/: Doxyfile.in  bwf-middleware-architecture.xml  graph-example.gv  graph-get.msc  graph-service.msc  graph-topic.msc  node-lifetime.msc  node-shutdown.msc  node-startup-service.msc  node-startup.msc  node-state-machine.gv  process_manager.gv  remapping-example.gv  requirements.html  service-call.msc  service-resolve.msc  timesync_plots.m  topic-read.msc  topic-write.msc  update-gh-pages.sh
V-REP/programming/bluezero/src/utils/: coverage.sh
V-REP/programming/bluezero/tests/: CMakeLists.txt  announce_timeout.cpp  args.cpp  c_clisrv_timeout.c  check_resolver_status.cpp  clisrv.cpp  clisrv2.cpp  clisrv_badname.cpp  clisrv_raw.cpp  clisrv_retry.cpp  compress.cpp  effective_spin_rate.cpp  json.cpp  many_nodes.cpp  multi_resolver.cpp  protocol.cpp  pubsub.cpp  pubsub2.cpp  pubsub_many.cpp  pubsub_poll.cpp  pubsub_raw.cpp  pubsub_slowsub.cpp  pubsub_slowsub_zmq.cpp  pubsub_slowsub_zmq_multipart.cpp  pubsub_unmanaged.cpp  resolver_shutdown.cpp  test_protobuf.cpp  test_protobuf.proto  time_sync_clock_tracking.cpp  time_sync_offset_recover.cpp  two_nodes_one_thread.cpp
(+1471 files in other folders)
