add_subdirectory(client_server)
add_subdirectory(client_server_c)
add_subdirectory(client_server_msg)
add_subdirectory(client_server_oop)
add_subdirectory(publisher_subscriber)
add_subdirectory(publisher_subscriber_c)
add_subdirectory(publisher_subscriber_msg)
add_subdirectory(publisher_subscriber_multi)
add_subdirectory(publisher_subscriber_oop)
add_subdirectory(remapping)
add_subdirectory(cmdline_args)
